# CW5-Vacancies_Parsing_to_DB

./: example.env  main.py  pyproject.toml  readme.md  settings.py
models/: exceptions.py  hh_api.py  main_menu.py  menu.py  menu_interaction_mixin.py  view_menu.py
sql_models/: db_manager.py
utils/: data_utils.py  output_utils.py
